# OpenAcquisition

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
openacquisition/: __init__.py  acquisition_method.py  openacquisition.py
openacquisition/chemistry/: IsotopeSplines_100kDa_21isotopes.xml  isotopes.py
openacquisition/instrumentation/: isolation.py
openacquisition/mathematics/: splines.py
src/OpenAcquisition/: __init__.py
src/OpenAcquisition/IsolationWindows/: isolation_shape.py
src/OpenAcquisition/isolation_windows/: isolation_shape.py
tests/: test_openacquisition.py
tests/IsolationWindows/: test_isolation_shape.py
tests/Isolation_windows/: test_isolation_shape.py
tests/chemistry/: test_isotopes.py
tests/instrumentation/: test_isolation.py
tests/mathematics/: test_splines.py
