[tool.poetry]
name = "openacquisition"
version = "0.0.8"
description = "A package for creating data acquisition methods for mass spectrometers"
authors = ["Dennis Goldfarb"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyopenms = "^2.7.0"
lazy = "^1.4"
mistune = "^2.0.4"
Yapsy = "^1.12.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.3"
myst-nb = {version = "^0.16.0", python = "^3.9"}
sphinx-autoapi = "^1.9.0"
sphinx-rtd-theme = "^1.0.0"
python-semantic-release = "^7.31.2"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
